Fixed the issues with AuthController